--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -27,7 +27,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         with:
-          registries: ${{ secrets.AWS_REGISTRY_ID }}
+          registry-type: public
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-publish
